--- a/ui/controls/inspector-option.reel/inspector-option.html
+++ b/ui/controls/inspector-option.reel/inspector-option.html
@@ -17,6 +17,7 @@
             "bindings": {
                 "name": {"<-": "@owner.name"},
                 "object": {"<-": "@owner.object"},
+                "property": {"<-": "@owner.property"},
                 "objectType": {"<-": "@owner.objectType ?? @owner.object.Type"}
             }
         }
