--- a/ui/controls/list.reel/list.html
+++ b/ui/controls/list.reel/list.html
@@ -30,6 +30,7 @@
             },
             "bindings": {
                 "moduleId": {"<-": "@owner.listItemModuleId"},
+                "component.index": {"<-": "@repetition:iteration.index"},
                 "object": {"<-": "@repetition:iteration.object"},
                 "component.showSubLabel": {"<-": "@owner.showSubLabel"}
             }
