--- a/ui/sections/containers/controls/docker-collection-list.reel/docker-collection-list.html
+++ b/ui/sections/containers/controls/docker-collection-list.reel/docker-collection-list.html
@@ -16,7 +16,7 @@
         "contentController": {
             "prototype": "montage/core/range-controller",
             "bindings": {
-                "content": {"<-": "@owner._dockerCollections"}
+                "content": {"<-": "@owner.instances"}
             }
         },
 
