--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -60,54 +60,52 @@
         "encryptionActions": {
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
-                "element": {"#": "encryptionActions"}
+                "element": {"#": "encryptionActions"},
+                "objectType": "EncryptedVolumeActions"
             },
             "bindings": {
                 "classList.has('hide')": {"<-": "!@owner.object.password_encrypted && !@owner.object.key_encrypted"},
-                "object": {"<-": "@owner.encryptedVolumeActions"},
-                "objectType": {"<-": "@owner.encryptedVolumeActionsType"}
+                "object": {"<-": "@owner.encryptedVolumeActions"}
             }
         },
         "shares": {
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
-                "element": {"#": "shares"}
+                "element": {"#": "shares"},
+                "objectType": "Share"
             },
             "bindings": {
                 "object": {"<-": "@owner.datasetShares.concat(@owner.directoryShares)"},
-                "objectType": {"<-": "@owner.shareType"},
                 "classList.has('hide')": {"<-": "!!@owner.object._isDetached"}
             }
         },
         "snapshots": {
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
-                "element": {"#": "snapshots"}
+                "element": {"#": "snapshots"},
+                "objectType": "VolumeSnapshot"
             },
             "bindings": {
                 "object": {"<-": "@owner.snapshots.filter{volume == @owner.object.id}"},
-                "objectType": {"<-": "@owner.snapshotType"},
                 "classList.has('hide')": {"<-": "!!@owner.object._isDetached"}
             }
         },
         "topology": {
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
-                "element": {"#": "topology"}
-            },
-            "bindings": {
-                "object": {"<-": "@owner.object.topology"},
-                "objectType": {"<-": "@owner.topologyType"}
+                "element": {"#": "topology"},
+                "property": "topology",
+                "name": "Topology"
             }
         },
         "datasets": {
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
-                "element": {"#": "datasets"}
+                "element": {"#": "datasets"},
+                "objectType": "VolumeDataset"
             },
             "bindings": {
                 "object": {"<-": "@owner.datasets.filter{volume == @owner.object.id}"},
-                "objectType": {"<-": "@owner.datasetType"},
                 "classList.has('hide')": {"<-": "!!@owner.object._isDetached"}
             }
         },
