makes arrow direction consistent on various controls and cleans up layout

--- a/ui/inspectors/cron-job.reel/cron-job-rule.reel/cron-job-rule.html
+++ b/ui/inspectors/cron-job.reel/cron-job-rule.reel/cron-job-rule.html
@@ -39,7 +39,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="CronJobRule">
+    <div data-montage-id="owner" class="CronJobRule g-margin-bottom">
         <div data-montage-id="ruleSectionTitle">
             <div data-montage-id="ruleOptionSelector"></div>
         </div>
