--- a/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
+++ b/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
@@ -83,16 +83,16 @@
 <body>
     <div data-montage-id="owner" class="InterfaceOverviewItem">
         <div class="InterfaceOverviewItem-overview">
-            <div data-montage-id="status" class="InterfaceOverviewItem-status"></div>
-            <div data-montage-id="interfaceName" class="InterfaceOverviewItem-name"></div>
-            <div data-montage-id="firstAddress" class="InterfaceOverviewItem-firstAddress"></div>
             <div data-montage-id="toggle" class="InterfaceOverviewItem-toggle">
                 <svg><use xlink:href="#i-triangle-down"/></svg>
             </div>
+            <div data-montage-id="status" class="InterfaceOverviewItem-status"></div>
+            <div data-montage-id="interfaceName" class="InterfaceOverviewItem-name"></div>
+            <div data-montage-id="firstAddress" class="InterfaceOverviewItem-firstAddress"></div>
         </div>
         <div class="InterfaceOverviewItem-details">
             <div data-montage-id="interfaceIpv4Repetition">
-                <div data-montage-id="interfaceIpv4"></div>
+                <div data-montage-id="interfaceIpv4" class="g-margin-top--half"></div>
             </div>
         </div>
     </div>
