--- a/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/volume-overview-item.html
+++ b/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/volume-overview-item.html
@@ -96,14 +96,14 @@
 <body>
     <div data-montage-id="owner" class="VolumeOverviewItem">
         <div class="VolumeOverviewItem-overview">
-            <div data-montage-id="status" class="VolumeOverviewItem-status"></div>
-            <div data-montage-id="name" class="VolumeOverviewItem-name"></div>
-            <div data-montage-id="size" class="VolumeOverviewItem-size"></div>
             <div data-montage-id="toggle" class="VolumeOverviewItem-toggle">
                 <svg><use xlink:href="#i-triangle-down"/></svg>
             </div>
+            <div data-montage-id="status" class="VolumeOverviewItem-status"></div>
+            <div data-montage-id="name" class="VolumeOverviewItem-name"></div>
+            <div data-montage-id="size" class="VolumeOverviewItem-size"></div>
         </div>
-        <div class="VolumeOverviewItem-details">
+        <div class="VolumeOverviewItem-details g-margin-top--half">
             <div data-montage-id="totalDetail"></div>
             <div data-montage-id="usedDetail"></div>
             <div data-montage-id="availableDetail"></div>
