removes a uneeded binding

--- a/ui/icons/disk.reel/disk.html
+++ b/ui/icons/disk.reel/disk.html
@@ -14,8 +14,7 @@
                 "disk": {"<-": "@owner.object ? @owner.object._disk.defined() ? @owner.object._disk : @owner.object : null"},
                 "isOffline": {"<-": "@owner.object._disk.defined() && @owner.object.status != 'ONLINE'" },
                 "isDetached": {"<-": "@owner.disk._allocation.defined() && @owner.disk._allocation.type == 'EXPORTED_VOLUME'"},
-                "classList.has('offline')": {"<-": "isOffline"},
-                "classList.has('exported')": {"<-": "isDetached"},
+                "classList.has('is-unavailable')": {"<-": "isOffline || isDetached"},
                 "smartFail": {"<-": "@owner.disk.status.smart_info.smart_status != 'PASS'" }
             }
         },
