--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -139,6 +139,16 @@
                 "element": {"#": "export"},
                 "value": "Detach"
             }
+        },
+        "upgrade": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "upgrade"},
+                "value": "Upgrade"
+            },
+            "bindings": {
+                "classList.has('hide')": {"<-": "!!@owner.upgraded"}
+            }
         }
     }
     </script>
@@ -162,7 +172,7 @@
             <div data-arg="footer-additional-button" class="ActionButtons">
                 <div data-montage-id="export"></div>
                 <div data-montage-id="scrub"></div>
-
+                <div data-montage-id="upgrade"></div>
             </div>
         </div>
     </div>
