Replace homemaderouter with crossroads.js

--- a/ui/controls/inspector-option.reel/inspector-option.html
+++ b/ui/controls/inspector-option.reel/inspector-option.html
@@ -18,6 +18,7 @@
                 "name": {"<-": "@owner.name"},
                 "object": {"<-": "@owner.object"},
                 "property": {"<-": "@owner.property"},
+                "path": {"<-": "@owner.path"},
                 "objectType": {"<-": "@owner.objectType ?? @owner.object.Type"}
             }
         }
