--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -73,7 +73,7 @@
             "properties": {
                 "element": {"#": "shares"},
                 "objectType": "Share",
-                "property": "_shares",
+                "property": "share",
                 "name": "Shares"
             },
             "bindings": {
@@ -85,7 +85,7 @@
             "properties": {
                 "element": {"#": "snapshots"},
                 "objectType": "VolumeSnapshot",
-                "property": "_snapshots",
+                "property": "volume-snapshot",
                 "name": "Snapshots"
             },
             "bindings": {
@@ -105,7 +105,7 @@
             "properties": {
                 "element": {"#": "datasets"},
                 "objectType": "VolumeDataset",
-                "property": "_datasets",
+                "property": "volume-dataset",
                 "name": "Datasets"
             },
             "bindings": {
