--- a/ui/controls/cascading-list.reel/cascading-list.html
+++ b/ui/controls/cascading-list.reel/cascading-list.html
@@ -18,7 +18,7 @@
                 "element": {"#": "repetition"}
             },
             "bindings": {
-                "content": {"<-": "@owner._stack"}
+                "content": {"<-": "@owner.stack"}
             }
         },
         "item": {
