Add volume importer and vmware datasets routes

--- a/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
+++ b/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
@@ -41,10 +41,8 @@
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
                 "element": {"#": "encrypted"},
-                "name": "Encrypted volume"
-            },
-            "bindings": {
-                "object": {"<-": "@owner.encryptedVolumeImporter"}
+                "name": "Encrypted volume",
+                "path": "encrypted"
             }
         },
         "importableDisks": {
