Add all sections root to routes

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -111,7 +111,7 @@
                 "element": {"#": "migrationSubstitution"}
             },
             "bindings": {
-                "switchValue": {"<-": "@owner.sectionService.sectionGeneration"}
+                "switchValue": {"<-": "@owner.sectionGeneration"}
             }
         },
         "signInModal": {
