Add system section routes

--- a/ui/sections/system/inspectors/alert.reel/alert.html
+++ b/ui/sections/system/inspectors/alert.reel/alert.html
@@ -28,10 +28,8 @@
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
                 "element": {"#": "settings"},
-                "name": "Settings"
-            },
-            "bindings": {
-                "object": {"<-": "@owner.settings"}
+                "name": "Settings",
+                "path": "settings"
             }
         }
     }
