adds spacing below updates table

--- a/ui/sections/system/inspectors/updates.reel/updates.html
+++ b/ui/sections/system/inspectors/updates.reel/updates.html
@@ -156,7 +156,7 @@
             <div data-montage-id="checkDownload"></div>
             <div data-montage-id="installUpdate"></div>
             <div data-montage-id="verify" class='hide'></div>
-            <div class="Updates-operations">
+            <div class="Updates-operations g-margin-bottom">
                 <div data-montage-id="operationsTableLabel"></div>
                 <div data-montage-id="operationsTable" class="Updates-table"></div>
             </div>
