--- a/ui/sections/network/inspectors/overview.reel/overview.html
+++ b/ui/sections/network/inspectors/overview.reel/overview.html
@@ -125,7 +125,7 @@
                         <div data-montage-id="nameserver" class="Overview-listItem"></div>
                     </div>
 
-                    <div data-montage-id="defaultRouteSectionTitle" class="flush-bottom"></div>
+                    <div data-montage-id="defaultRouteSectionTitle"></div>
                     <div data-montage-id="defaultRouteIpv4"></div>
                     <div data-montage-id="defaultRouteIpv6"></div>
                 </div>
