Fix create buttons for type selectors

--- a/ui/controls/viewer.reel/viewer.html
+++ b/ui/controls/viewer.reel/viewer.html
@@ -17,8 +17,7 @@
         "controller": {
             "prototype": "montage/core/range-controller",
             "bindings": {
-                "content": {"<-": "@owner.object"},
-                "sortPath": {"<-": "@owner.sortingPath"}
+                "content": {"<-": "@owner.object"}
             }
         },
         "list": {
