Add rsyncd modules routes

--- a/ui/inspectors/service.reel/rsyncd-service.reel/rsyncd-service.html
+++ b/ui/inspectors/service.reel/rsyncd-service.reel/rsyncd-service.html
@@ -14,10 +14,9 @@
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
                 "element": {"#": "rsyncdModules"},
-                "name": "Rsync Modules"
-            },
-            "bindings": {
-                "object": {"<-": "@owner.rsyncdModules"}
+                "name": "Rsync Modules",
+                "path": "modules",
+                "objectType": "RsyncdModule"
             }
         },
         "portValidator": {
