changes select state for notifications, removes arrow, adds hover state

--- a/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/alert-notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/alert-notification.html
@@ -87,9 +87,7 @@
                 </div>
             </div>
             <div class="Notification-actions">
-                <div data-montage-id="expandButton" class="Notification-expand">
-                    <svg><use xlink:href="#i-arrow"/></svg>
-                </div>
+                <div data-montage-id="expandButton" class="Notification-expand"></div>
                 <div data-montage-id="dismissButton" class="Notification-close">
                     <svg id="i-close" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <title>close</title><g fill="none" fill-rule="evenodd"><circle id="i-close-bg" stroke="#979797" fill="#D8D8D8" cx="12" cy="12" r="10"/><path id="i-close-symbol" d="M11.293 12l-3.89-3.89-.353-.353.707-.707.354.354 3.89 3.89 3.89-3.89.353-.354.707.707-.354.354-3.89 3.89 3.89 3.89.354.353-.707.707-.354-.354-3.89-3.89-3.89 3.89-.353.354-.707-.707.354-.354 3.89-3.89z" fill="#979797"/></g>
