--- a/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
@@ -89,9 +89,7 @@
                 </div>
             </div>
             <div class="Notification-actions">
-                <div data-montage-id="expandButton" class="Notification-expand">
-                    <svg><use xlink:href="#i-arrow"/></svg>
-                </div>
+                <div data-montage-id="expandButton" class="Notification-expand"></div>
             </div>
         </div>
         <div data-montage-id="details" class="Notification-details"></div>
